# Group1_2023_Bioinfo_Stp

./: .gitignore  .readthedocs.yaml  Dockerfile  Huma_PanelAppAPI.py  INSTALL.md  LICENSE  Logging_Debugging_Module.py  README.md  USERGUIDE.md  VariantValidatorapi.py  app.py  main.py  pyproject.toml  requirements.txt  settings.py  test.txt
.github/: ci_testing_workflow.yml
.github/workflows/: CI_Testing_workflow.yml  ci_testing_workflow.yml  pyre.yml
AppBlueprints/: database_blueprint.py  orm_database.py
appblueprints/: database_blueprint.py
appblueprints/depreciated/: user_auth.py
docs/: Installation.rst  Support.rst  changelog.rst  conf.py  database.rst  docker.rst  features.rst  index.rst  installation.rst  requirements.txt  resources.rst  testing.rst  toctree.rst
docs/source/: conf.py
modules/: HGNC_converter.py  Logging_Debugging_Module.py  PanelAppApi.py  ParserExcel.py  Settings.py  api_query_R.py  bedmake.py  bedmaker.py  logging.py  logging_debugging_module.py  orm_database.py  parser_test_directory.py  settings.py  test_api.py
modules/deprecated/: deprecated__PanelAppApi.py  depreciated_HGNC_converter.py  main.py  old_flask_comp.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
templates/: Rare-and-inherited-disease-national-genomic-test-directory-version-5.1.xlsx  genelist.html  home.html  panels_choice.html  patient_list_all.html  results.html  sample_create.html  sample_list_all.html
templates/old_templates/: old.html
tests/: __init__.py  api_query_test.py  conftest.py  test_bedmake.py
