[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

# Ignore flat-layout.
[tool.setuptools]
py-modules = []

[project]
name = "PanelSearcher"
version = "1"
description = "University project, Flask App to search the natinonal genomic test directory for a panel of genes"
dependencies = [
    "blinker==1.7.0",
    "certifi==2023.7.22",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "et-xmlfile==1.1.0",
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "greenlet==3.0.1",
    "idna==3.4",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.3",
    "numpy==1.26.1",
    "openpyxl==3.1.2",
    "pandas==2.1.2",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "requests==2.31.0",
    "six==1.16.0",
    "SQLAlchemy==2.0.23",
    "typing_extensions==4.8.0",
    "tzdata==2023.3",
    "urllib3==2.0.7",
    "Werkzeug==3.0.1",
    "sphinx-rtd-theme==1.1.0b3",
]
requires-python = ">=3.6"
authors = [
  {name = "Mathew Baines"},
  {name = "Sadie Ash"},
  {name = "Huma Zahib"},
]

readme = "README.md"

[project.urls]
Homepage = "http://localhost:5000"
Documentation = "https://group1-2023-bioinfo-stp.readthedocs.io/en/latest/"
Repository = "https://github.com/Mathew-B-SDGS/Group1_2023_Bioinfo_Stp/"